feat: add error codes
